// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Form Label Colon 1`] = `
<div
  class="fd-form-item"
>
  
        
  <label
    class="fd-form-label fd-form-label--colon"
    for="input-1d"
  >
    Input With Colon
  </label>
  
        
  <input
    class="fd-input"
    id="input-1d"
    placeholder="Field placeholder text"
    type="text"
  />
  
    
</div>
`;

exports[`Storyshots Components/Forms/Form Label Default 1`] = `
<div
  class="fd-form-item"
>
  
        
  <label
    class="fd-form-label"
    for="input-1"
  >
    Default input
  </label>
  
        
  <input
    class="fd-input"
    id="input-1"
    placeholder="Field placeholder text"
    type="text"
  />
  
    
</div>
`;

exports[`Storyshots Components/Forms/Form Label Disabled 1`] = `
<div
  class="fd-form-item"
>
  
        
  <label
    class="fd-form-label"
    for="input-05"
  >
    Disabled Input
  </label>
  
        
  <input
    class="fd-input"
    disabled=""
    id="input-05"
    placeholder="Field placeholder text"
    type="text"
  />
  
    
</div>
`;

exports[`Storyshots Components/Forms/Form Label Required 1`] = `
<div
  class="fd-form-item"
>
  
        
  <label
    class="fd-form-label fd-form-label--required"
    for="input-1c"
  >
    Required Input
  </label>
  
        
  <input
    class="fd-input"
    id="input-1c"
    placeholder="Field placeholder text"
    type="text"
  />
  
    
</div>
`;
